syntax = "proto3";
import "google/protobuf/struct.proto";

/********** Generic **********/

message StringValue {
  string value = 1;
}

message Int32Value {
  int32 value = 1;
}

message Callback {
  int32 callId = 1;
}

message LocalProp {
  string localKey = 1;
  string propKey = 2;
}


/********** Components **********/

message CustomComponent {
  string type_id = 1;
  bytes contents = 2;
};

message View {
  Struct style = 1;
  repeated ReactElement children = 2;
};

message FlatList {
  Struct style = 1;
  Callback onEndReached = 2;
  Int32Value onEndReachedThreshold = 3;
  repeated ReactElement keyedChildren = 4;
  repeated LocalProp localProps = 5;
};

message TouchableOpacity {
  Callback onPress = 1;
  repeated ReactElement children = 2;
  repeated LocalProp localProps = 3;
}

message RawText {
  string text = 1;
};

message Text {
  Struct style = 1;
  repeated ReactElement children = 2;
};

message TextInput {
  Struct style = 1;
  StringValue placeholderTextColor = 2;
  StringValue placeholder = 3;
  string value = 4;
  repeated LocalProp localProps = 5;
  Callback onValueChange = 6;
};

message Switch {
  Struct style = 1;
  bool value = 2;
  Callback onValueChange = 3;
}

message Image {
  Struct style = 1;
  string sourceURLString = 2;
}

message ReactElement {
  string key = 0;
  oneof value {
    CustomComponent custom = 1;
    View view = 2;
    FlatList flatList = 3;
    TouchableOpacity touchableOpacity = 4;
    TextInput textInput = 5;
    Text text = 6;
    RawText rawText = 7;
    Switch switch = 8;
    Image image = 9;
  }
};

/********** Messages **********/
message Unmount {};
message Render {
  string name = 1;
  Struct props = 2;
  repeated string localProps = 3;
};
message Call {
  int32 messageId = 1;
  Struct args = 2;
}

message ClientToServer {
  oneof value {
    Unmount unmount = 0;
    Render render = 1;
    Call call = 3;
  };
  int32 rootId = 2;
};

/* Unexpected error. TODO: Add more metadata. */
message Error {}
message Update {
  repeated ReactElement element = 1;
};

message ServerToClient {
  oneof value {
    Error error = 0;
    Update update = 1;
  }
  int32 rootId = 2;
};
